--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "immutable": "^3.7.6"
+    "immutable": "^3.7.6",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   }
 }
