--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai-immutable": "^1.5.4",
     "jsdom": "^8.3.0",
     "mocha": "^2.4.5",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
