--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "dependencies": {
     "immutable": "^3.7.6",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-addons-pure-render-mixin": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-router": "^2.0.0"
   }
 }
