--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^15.0.1",
     "react-addons-pure-render-mixin": "^15.0.1",
     "react-dom": "^15.0.1",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "redux": "^3.4.0"
   }
 }
