--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "jsdom": "^8.3.0",
     "mocha": "^2.4.5",
     "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.14",
+    "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
@@ -41,7 +41,9 @@
     "react": "^15.0.1",
     "react-addons-pure-render-mixin": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-redux": "^4.4.2",
     "react-router": "^2.0.0",
-    "redux": "^3.4.0"
+    "redux": "^3.4.0",
+    "socket.io-client": "^1.4.5"
   }
 }
